syntax = "proto3";
package rarimo.rarimocore.rarimocore;

option go_package = "gitlab.com/rarimo/rarimo-core/x/rarimocore/types";

import "tokenmanager/item.proto";

message Transfer {
  // hex-encoded keccak256 hash for tx||event||chain strings' bytes
  string origin = 1;

  // Deposit transaction data
  string tx = 2;
  string eventId = 3;

  // hex-encoded
  string receiver = 4;
  // dec-encoded
  string amount = 5;

  // hex-encoded
  string bundleData = 6;
  // hex-encoded
  string bundleSalt = 7;

  // Information about current and target chains
  rarimo.rarimocore.tokenmanager.OnChainItemIndex from = 8;
  rarimo.rarimocore.tokenmanager.OnChainItemIndex to = 9;
  // Information about token
  rarimo.rarimocore.tokenmanager.ItemMetadata meta = 10; // Optional (if item currently does not exists
}

