syntax = "proto3";
package rarimo.rarimocore.tokenmanager;

option go_package = "gitlab.com/rarimo/rarimo-core/x/tokenmanager/types";


import "gogoproto/gogo.proto";
import "tokenmanager/item.proto";


message CollectionMetadata {
  string name = 1;
  string symbol = 2;
  string metadataURI = 3;
}

message CollectionDataIndex {
  string collection = 1;
  // Chain name
  string chain = 2;
  // Collection address
  string address = 3;
}

message CollectionData {
  CollectionDataIndex index = 1;
  Type tokenType = 3;
  bool wrapped = 4;
  uint32 decimals = 5;
}

message Collection {
  string index = 1;
  CollectionMetadata meta = 2;
}
